--- a/frontend/src/Pages/SignupPage2.css
+++ b/frontend/src/Pages/SignupPage2.css
@@ -1,4 +1,4 @@
-.signup-page {
+/* .signup-page {
     background-color: #000;
     height: 100vh;
     display: flex;
@@ -51,4 +51,4 @@
   button:hover {
     background-color: #45a049;
   }
-  
+   */
